# cloud-storage-app

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
backend/Dockerfiles/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 2025_06_07_0217-e2f7be992db5_criacao_tabela_user.py
backend/scripts/: check_db_connection.py  setup_database.py
backend/src/: __init__.py
backend/src/cloud-storage-app/: config.py  main.py
backend/src/cloud-storage-app/domain/entities/: user.py
backend/src/cloud-storage-app/domain/events/: __init__.py  domain_event.py  user_domain_event.py
backend/src/cloud-storage-app/domain/value_objects/: __init__.py  first_name.py  hashed_password.py  password.py  profile_picture.py  user_description.py
backend/src/cloud-storage-app/infrastructure/database/: connection.py
backend/src/cloud-storage-app/presentation/schemas/: user_schema.py
backend/src/cloud-storage-app/shared/: exceptions.py
backend/src/cloud_storage_app/: __init__.py  config.py  main.py
backend/src/cloud_storage_app/application/: __init__.py  exceptions.py
backend/src/cloud_storage_app/application/dtos/: user_dtos.py
backend/src/cloud_storage_app/application/services/: password_service.py
backend/src/cloud_storage_app/domain/: __init__.py
backend/src/cloud_storage_app/domain/entities/: __init__.py  user.py
backend/src/cloud_storage_app/domain/events/: __init__.py  user_domain_events.py
backend/src/cloud_storage_app/domain/exceptions/: user_exceptions.py
backend/src/cloud_storage_app/domain/repositories/: user_repository.py
backend/src/cloud_storage_app/domain/services/: password_service.py
backend/src/cloud_storage_app/domain/value_objects/: __init__.py  email.py  hashed_password.py  last_name.py  (+2 more)
backend/src/cloud_storage_app/infrastructure/: __init__.py
backend/src/cloud_storage_app/presentation/: __init__.py
backend/src/cloud_storage_app/shared/: __init__.py  auth_utils.py
backend/tests/: test_jwt_service.py
(+71 files in other folders)
