[project]
name = "cloud-storage-app"
version = "0.1.0"
description = "Serviço de Backend com FastAPI para uma aplicação de armazenamento de arquivos em nuvem"
authors = [{ name = "Guilherme Torres Melo", email = "guilhermetorresm@ufpi.edu.br" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.114.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1"
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.0",
    "boto3==1.34.106",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "httpx==0.27.0",
    "pytest-cov==5.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "pytest-cov",
]