[project]
name = "cloud_storage_app"
version = "0.1.0"
description = "Serviço de Backend com FastAPI para uma aplicação de armazenamento de arquivos em nuvem"
authors = [{ name = "Guilherme Torres Melo", email = "guilhermetorresm@ufpi.edu.br" }]
requires-python = ">=3.11"
dependencies = [
    "dependency-injector>=4.41.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.8.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.40",
    "alembic>=1.15.1",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0",
    "python-multipart>=0.0.6",
    "boto3>=1.34.106",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_storage_app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
